--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <nav class="nav__menu">
                     <ul class="nav__list">
                         <li><a href="#" class="nav__link">HOME</a></li>
-                        <li><a href="#" class="nav__link">ABOUT US</a></li>
+                        <li><a href="/iman.html" class="nav__link">ABOUT US</a></li>
                         <li><a href="#" class="nav__link">CREATE YOUR PLAN</a></li>
                     </ul>
                 </nav>
@@ -52,7 +52,7 @@
                 our collection
             </p>
             <div class="collections__cards">
-                <img src="./Img/expresso.png" alt="">
+                <img src="" alt="">
 
                 <div class="collections__text">
 
