--- a/iman.html
+++ b/iman.html
@@ -12,7 +12,7 @@
     <img src="Img/logo.png" alt="">
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Create Your Plan</a></li>
       </ul>
