--- a/iman.html
+++ b/iman.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coffeeroasters</title>
+  <title>coffee</title>
   <link rel="stylesheet" href="iman.css">
 </head>
 <body>
