--- a/iman.html
+++ b/iman.html
@@ -28,7 +28,7 @@
   </section>
 
   <section class="commitment-section">
-    <img src="Bitmap@2x.png" alt="Coffee making">
+    <img src="ingpage2/Bitmap@2x.png" alt="Coffee making">
     <div class="commitment-text">
       <h2>Our commitment</h2>
       <p>
@@ -43,5 +43,77 @@
     </div>
     
   </section>
+  <section class="quality">
+    <div class="text">
+      <h2>Uncompromising quality</h2>
+      <p>
+        Although we work with growers who pay close attention to all stages of harvest and processing, 
+        we employ, on our end, a rigorous quality control program to avoid over-roasting or baking the coffee dry. 
+        Every bag of coffee is tagged with a roast date and batch number. 
+        Our goal is to roast consistent, user-friendly coffee.
+      </p>
+    </div>
+    <div class="image">
+      <!-- O'zing coffee rasmi qo'yishing kerak -->
+      <img src="ingpage2/Bitmap.png" alt="">
+    </div>
+  </section>
+  <!-- Section 2 - Headquarters -->
+  <section class="headquarters">
+    <h3>Our headquarters</h3>
+    <div class="locations">
+
+      <div class="location">
+        <img src="ingpage2/Combined Shape.png" alt="United Kingdom">
+        <h4>United Kingdom</h4>
+        <p>
+          68  Asfordby Rd<br>
+          Alcaston<br>
+          SY6 1YA<br>
+          +44 1241 918425
+        </p>
+      </div>
+
+      <div class="location">
+        <img src="ingpage2/Combined Shape (1).png" alt="Canada">
+        <h4>Canada</h4>
+        <p>
+          1528  Eglinton Avenue<br>
+          Toronto<br>
+          Ontario M4P 1A6<br>
+          +1 416 485 2997
+        </p>
+      </div>
+
+      <div class="location">
+        <img src="ingpage2/Combined Shape (2).png" alt="Australia">
+        <h4>Australia</h4>
+        <p>
+          36 Swanston Street<br>
+          Kewell<br>
+          Victoria<br>
+          +61 4 9928 3629
+        </p>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="footer-container">
+      <img src="Img/logo2.png" alt="">
+      <div class="links">
+        <a href="#">HOME</a>
+        <a href="#">ABOUT US</a>
+        <a href="#">CREATE YOUR PLAN</a>
+      </div>
+      <div class="socials">
+        <a href="https://www.facebook.com/?locale=ru_RU">FB</a>
+        <a href="https://x.com/">TW</a>
+        <a href="https://www.instagram.com/ilxomov_aza/">IG</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
