--- a/iman.html
+++ b/iman.html
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="#">About Us</a></li>
-        <li><a href="#">Create Your Plan</a></li>
+        <li><a href="plan.html">Create Your Plan</a></li>
       </ul>
     </nav>
   </header>
@@ -54,11 +54,10 @@
       </p>
     </div>
     <div class="image">
-      <!-- O'zing coffee rasmi qo'yishing kerak -->
       <img src="ingpage2/Bitmap.png" alt="">
     </div>
   </section>
-  <!-- Section 2 - Headquarters -->
+
   <section class="headquarters">
     <h3>Our headquarters</h3>
     <div class="locations">
@@ -99,7 +98,6 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <div class="footer-container">
       <img src="Img/logo2.png" alt="">
@@ -115,5 +113,6 @@
       </div>
     </div>
   </footer>
+
 </body>
 </html>
