--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <ul class="nav__list">
                         <li><a href="#" class="nav__link">HOME</a></li>
                         <li><a href="/iman.html" class="nav__link">ABOUT US</a></li>
-                        <li><a href="#" class="nav__link">CREATE YOUR PLAN</a></li>
+                        <li><a href="plan.html" class="nav__link">CREATE YOUR PLAN</a></li>
                     </ul>
                 </nav>
             </div>
