--- a/index.html
+++ b/index.html
@@ -9,25 +9,33 @@
 
 
 </head>
-
 <body>
 
-
+<!-- navbar -->
     <header class="nav__header">
-        <div class="container">
-            <div class="nav__container">
-                <img src="./Img/logo.png" alt="" class="nav__logo" />
-                <nav class="nav__menu">
-                    <ul class="nav__list">
-                        <li><a href="#" class="nav__link">HOME</a></li>
-                        <li><a href="/iman.html" class="nav__link">ABOUT US</a></li>
-                        <li><a href="plan.html" class="nav__link">CREATE YOUR PLAN</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
+  <div class="container nav__container">
+    <div class="nav__logo">
+      <img src="Img/logo.png" alt="CoffeeRoasters logo">
+    </div>
 
+    <ul class="nav__list">
+      <li><a href="#" class="nav__link">HOME</a></li>
+      <li><a href="iman.html" class="nav__link">ABOUT US</a></li>
+      <li><a href="plan.html" class="nav__link">CREATE YOUR PLAN</a></li>
+    </ul>
+
+    <!-- Hamburger icon (fa-bars) -->
+    <div class="nav__menu">
+      <span class="menu__icon">&#9776;</span>
+    </div>
+  </div>
+</header>
+
+
+
+
+
+<!-- great coffee -->
     <div class="intro__works">
         <div class="container">
             <div class="bg__img">
@@ -46,13 +54,13 @@
         </div>
     </div>
 
+
+
+<!-- coffees -->
     <div class="collections__wrapper">
         <div class="collections">
-            <p class="collections__maintext">
-                our collection
-            </p>
             <div class="collections__cards">
-                <img src="" alt="">
+                <img src="./Img/Planalto.png" alt="">
 
                 <div class="collections__text">
 
@@ -89,6 +97,12 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+<!-- section4 -->
     <div class="choose__wrapper">
         <div class="choose__us">
             <div class="choose__us__header">
@@ -124,8 +138,8 @@
     </div>
 
 
-
-    <div class="works">
+<!-- How it works -->
+       
         <p class="works__title">How it works</p>
         <img src="./Img/line.png" alt="line" class="works__line">
 
@@ -160,6 +174,8 @@
         <button class="works__btn">Create your plan</button>
     </div>
 
+
+<!-- footer1 -->
     <div class="footer__wrap">
         <div class="footer">
             <img src="./Img/logo2.png" alt="logo" class="nav__logo">
@@ -195,6 +211,6 @@
                 </a>
             </div>
         </div>
+    </div>
 </body>
-
 </html>
